--- a/woo-vipps/payment/src/admin/settings/src/App.css
+++ b/woo-vipps/payment/src/admin/settings/src/App.css
@@ -9,6 +9,7 @@
   width: 20px;
   height: 20px;
 }
+
 .vipps-mobilepay-react-loading div {
   box-sizing: border-box;
   display: block;
@@ -21,19 +22,24 @@
   animation: vipps-mobilepay-react-loading 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   border-color: #666 transparent transparent transparent;
 }
+
 .vipps-mobilepay-react-loading div:nth-child(1) {
   animation-delay: -0.45s;
 }
+
 .vipps-mobilepay-react-loading div:nth-child(2) {
   animation-delay: -0.3s;
 }
+
 .vipps-mobilepay-react-loading div:nth-child(3) {
   animation-delay: -0.15s;
 }
+
 @keyframes vipps-mobilepay-react-loading {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -45,10 +51,18 @@
   gap: 2rem;
 }
 
-.vipps-mobilepay-react-form-field > label {
-  width: 15%;
+.vipps-mobilepay-react-form-field>label {
+  width: 20%;
+  overflow-wrap: break-word;
 }
-.vipps-mobilepay-react-form-field > div {
+
+@media (min-width: 860px) {
+  .vipps-mobilepay-react-form-field>label {
+    overflow-wrap: normal;
+  }
+}
+
+.vipps-mobilepay-react-form-field>div {
   width: 85%;
 }
 
@@ -63,6 +77,7 @@
   color: rgb(29, 35, 39);
   font-size: 14px;
 }
+
 /* Tabs */
 .vipps-mobilepay-react-tab-description {
   margin-bottom: 1rem;
@@ -72,6 +87,7 @@
 .vipps-mobilepay-react-field-description {
   color: #666;
 }
+
 .vipps-mobilepay-react-button-actions {
   display: flex;
   column-gap: 1rem;
@@ -128,12 +144,110 @@
   height: auto;
 }
 
-.vipps-mobilepay-react-field-error {
-  color: #dc3232;
-  font-size: 12px;
-  margin-top: 5px;
+.vipps-mobilepay-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 3rem;
 }
 
-select.has-error {
-  border-color: #dc3232;
+@media (min-width: 420px) {
+  .vipps-mobilepay-form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+  }
+}
+
+
+@media (min-width: 700px) {
+  .vipps-mobilepay-form-container {
+    align-items: flex-start;
+    flex-direction: row;
+    gap: 1rem,
+  }
+}
+
+@media (min-width: 1280px) {
+  .vipps-mobilepay-form-container {
+    gap: 3rem;
+  }
+}
+
+.vipps-mobilepay-react-form-field {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.vipps-mobilepay-form-help-box {
+  background-color: white;
+  border-color: rgb(140, 143, 148);
+  border-radius: 4px;
+  border: 1px solid #8c8f94;
+  padding: 30px;
+  width: 13rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 420px) {
+  .vipps-mobilepay-form-help-box {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+.vipps-mobilepay-form-help-box a {
+  text-wrap: nowrap;
+}
+
+/* .vipps-mobilepay-form-col button[class^="button"] {
+  border-radius: 10px;
+} */
+
+.vipps-mobilepay-react-checkout-confirm .body {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    margin-bottom: 2rem
+}
+
+@media (min-width: 870px) {
+  .vipps-mobilepay-react-checkout-confirm .body {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+  }
+}
+
+.vipps-mobilepay-react-checkout-confirm .title {
+  margin-bottom: 1em;
+  font-weight: bold;
+}
+
+.vipps-mobilepay-react-checkout-confirm li {
+  list-style: inside;
+  margin-left: 1em;
+}
+
+.vipps-mobilepay-react-checkout-confirm img {
+  margin-right: 50px;
+  width: 20rem;
+  /* Align alt text */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 1280px) {
+  .vipps-mobilepay-react-checkout-confirm img {
+    width: 30rem;
+  }
+}
+
+.vipps-mobilepay-react-checkout .title {
+  margin-bottom: 1em;
+  font-weight: bold;
 }
