--- a/woo-vipps/payment/css/vipps.css
+++ b/woo-vipps/payment/css/vipps.css
@@ -80,14 +80,15 @@ div.vipps_buy_now_wrapper.loop  a.single-product.button.vipps-buy-now img{
     display:flex;
     flex-direction:column;
     align-items:center;
-    /* gap: 1rem; */
     font-family: "Vipps Text", Arial, sans-serif;
     margin-bottom: 1rem;
+    color: black;
 }
 .vipps_checkout_widget_wrapper .vipps_checkout_widget .vipps_checkout_widget_title {
     font-size:18px;
     line-height:24px;
     font-weight:500;
+    color: black;
 }
 .vipps_checkout_widget_wrapper .vipps_checkout_widget .vipps_checkout_widget_title.accordion {
     cursor: pointer;
@@ -125,10 +126,14 @@ div.vipps_buy_now_wrapper.loop  a.single-product.button.vipps-buy-now img{
     border-radius: 6px;
     box-sizing: border-box;
     outline: none;
+    margin: 0px;
 }
 .vipps_checkout_widget_wrapper .vipps_checkout_widget .vipps_checkout_widget_button {
     min-width: 5.5em;
     padding: 7.5px 16px;
+    font-size: 14px;
+    line-height:20px;
+    text-transform: none;
     border-radius: 24px;
     color: white;
     margin-top: 0.5em;
