--- a/woo-vipps/payment/css/vipps.css
+++ b/woo-vipps/payment/css/vipps.css
@@ -118,10 +118,16 @@ div.vipps_buy_now_wrapper.loop  a.single-product.button.vipps-buy-now img{
     text-align: center;
 }
 .vipps_checkout_widget_wrapper .vipps_checkout_widget {
-    width: 586px;
+    width: 100%;
     font-weight:400;
     border-bottom: 1px solid lightgrey;
 }
+@media (min-width: 590px) {
+    .vipps_checkout_widget_wrapper .vipps_checkout_widget {
+width: 586px;
+    }
+}
+
 .vipps_checkout_widget_wrapper .vipps_checkout_widget .vipps_checkout_body {
     display: none;
 }
